@@ -25,15 +25,10 @@
 package com.oracle.svm.driver;
 
 import java.io.File;
-import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.List;
 
-import com.oracle.svm.core.option.BundleMember;
 import com.oracle.svm.core.option.OptionOrigin;
 import com.oracle.svm.driver.NativeImage.ArgumentQueue;
 import com.oracle.svm.util.LogUtils;
@@ -52,11 +47,11 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
     /* Defunct legacy options that we have to accept to maintain backward compatibility */
     private static final String noServerOption = "--no-server";
 
+    private static final String nativeAccessOption = "--enable-native-access";
+
     DefaultOptionHandler(NativeImage nativeImage) {
         super(nativeImage);
     }
-
-    boolean disableAtFiles = false;
 
     @Override
     public boolean consume(ArgumentQueue args) {
@@ -90,9 +85,9 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
                 }
                 String[] mainClassModuleArgParts = mainClassModuleArg.split("/", 2);
                 if (mainClassModuleArgParts.length > 1) {
-                    nativeImage.addPlainImageBuilderArg(nativeImage.oHClass + mainClassModuleArgParts[1]);
+                    nativeImage.addPlainImageBuilderArg(NativeImage.injectHostedOptionOrigin(nativeImage.oHClass + mainClassModuleArgParts[1], OptionOrigin.originDriver));
                 }
-                nativeImage.addPlainImageBuilderArg(nativeImage.oHModule + mainClassModuleArgParts[0]);
+                nativeImage.addPlainImageBuilderArg(NativeImage.injectHostedOptionOrigin(nativeImage.oHModule + mainClassModuleArgParts[0], OptionOrigin.originDriver));
                 nativeImage.setModuleOptionMode(true);
                 return true;
             case addModulesOption:
@@ -101,7 +96,6 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
                 if (addModulesArgs == null) {
                     NativeImage.showError(headArg + moduleSetModifierOptionErrorMessage);
                 }
-                nativeImage.addImageBuilderJavaArgs(addModulesOption, addModulesArgs);
                 nativeImage.addAddedModules(addModulesArgs);
                 return true;
             case limitModulesOption:
@@ -128,10 +122,6 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
                 nativeImage.addPlainImageBuilderArg("-H:DiagnosticsDir=" + nativeImage.diagnosticsDir);
                 System.out.println("# Diagnostics mode enabled: image-build reports are saved to " + nativeImage.diagnosticsDir);
                 return true;
-            case "--disable-@files":
-                args.poll();
-                disableAtFiles = true;
-                return true;
             case noServerOption:
                 args.poll();
                 LogUtils.warning("Ignoring server-mode native-image argument " + headArg + ".");
@@ -139,6 +129,15 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
             case "--enable-preview":
                 args.poll();
                 nativeImage.addCustomJavaArgs("--enable-preview");
+                nativeImage.enablePreview();
+                return true;
+            case nativeAccessOption:
+                args.poll();
+                String modules = args.poll();
+                if (modules == null) {
+                    NativeImage.showError(nativeAccessOption + moduleSetModifierOptionErrorMessage);
+                }
+                nativeImage.addCustomJavaArgs(nativeAccessOption + "=" + modules);
                 return true;
         }
 
@@ -201,7 +200,6 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
             if (addModulesArgs.isEmpty()) {
                 NativeImage.showError(headArg + moduleSetModifierOptionErrorMessage);
             }
-            nativeImage.addImageBuilderJavaArgs(addModulesOption, addModulesArgs);
             nativeImage.addAddedModules(addModulesArgs);
             return true;
         }
@@ -214,219 +212,16 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
             nativeImage.addLimitedModules(limitModulesArgs);
             return true;
         }
-        if (headArg.startsWith("@") && !disableAtFiles) {
+        if (headArg.startsWith(nativeAccessOption + "=")) {
             args.poll();
-            headArg = headArg.substring(1);
-            Path origArgFile = Paths.get(headArg);
-            Path argFile = nativeImage.useBundle() ? nativeImage.bundleSupport.substituteAuxiliaryPath(origArgFile, BundleMember.Role.Input) : origArgFile;
-            NativeImage.NativeImageArgsProcessor processor = nativeImage.new NativeImageArgsProcessor(OptionOrigin.argFilePrefix + argFile);
-            readArgFile(argFile).forEach(processor);
-            List<String> leftoverArgs = processor.apply(false);
-            if (leftoverArgs.size() > 0) {
-                NativeImage.showError(String.format("Found unrecognized options while parsing argument file '%s':%n%s", argFile, String.join(System.lineSeparator(), leftoverArgs)));
+            String nativeAccessModules = headArg.substring(nativeAccessOption.length() + 1);
+            if (nativeAccessModules.isEmpty()) {
+                NativeImage.showError(headArg + moduleSetModifierOptionErrorMessage);
             }
+            nativeImage.addCustomJavaArgs(headArg);
             return true;
         }
         return false;
-    }
-
-    // Ported from JDK11's java.base/share/native/libjli/args.c
-    enum PARSER_STATE {
-        FIND_NEXT,
-        IN_COMMENT,
-        IN_QUOTE,
-        IN_ESCAPE,
-        SKIP_LEAD_WS,
-        IN_TOKEN
-    }
-
-    static class CTX_ARGS {
-        PARSER_STATE state;
-        int cptr;
-        int eob;
-        char quoteChar;
-        List<String> parts;
-        String options;
-    }
-
-    // Ported from JDK11's java.base/share/native/libjli/args.c
-    private static List<String> readArgFile(Path file) {
-        List<String> arguments = new ArrayList<>();
-        // Use of the at sign (@) to recursively interpret files isn't supported.
-        arguments.add("--disable-@files");
-
-        String options = null;
-        try {
-            options = new String(Files.readAllBytes(file), StandardCharsets.UTF_8);
-        } catch (IOException e) {
-            NativeImage.showError("Error reading argument file", e);
-        }
-
-        CTX_ARGS ctx = new CTX_ARGS();
-        ctx.state = PARSER_STATE.FIND_NEXT;
-        ctx.parts = new ArrayList<>(4);
-        ctx.quoteChar = '"';
-        ctx.cptr = 0;
-        ctx.eob = options.length();
-        ctx.options = options;
-
-        String token = nextToken(ctx);
-        while (token != null) {
-            arguments.add(token);
-            token = nextToken(ctx);
-        }
-
-        // remaining partial token
-        if (ctx.state == PARSER_STATE.IN_TOKEN || ctx.state == PARSER_STATE.IN_QUOTE) {
-            if (ctx.parts.size() != 0) {
-                token = String.join("", ctx.parts);
-                arguments.add(token);
-            }
-        }
-        return arguments;
-    }
-
-    // Ported from JDK11's java.base/share/native/libjli/args.c
-    @SuppressWarnings("fallthrough")
-    private static String nextToken(CTX_ARGS ctx) {
-        int nextc = ctx.cptr;
-        int eob = ctx.eob;
-        int anchor = nextc;
-        String token;
-
-        for (; nextc < eob; nextc++) {
-            char ch = ctx.options.charAt(nextc);
-
-            // Skip white space characters
-            if (ctx.state == PARSER_STATE.FIND_NEXT || ctx.state == PARSER_STATE.SKIP_LEAD_WS) {
-                while (ch == ' ' || ch == '\n' || ch == '\r' || ch == '\t' || ch == '\f') {
-                    nextc++;
-                    if (nextc >= eob) {
-                        return null;
-                    }
-                    ch = ctx.options.charAt(nextc);
-                }
-                ctx.state = (ctx.state == PARSER_STATE.FIND_NEXT) ? PARSER_STATE.IN_TOKEN : PARSER_STATE.IN_QUOTE;
-                anchor = nextc;
-                // Deal with escape sequences
-            } else if (ctx.state == PARSER_STATE.IN_ESCAPE) {
-                // concatenation directive
-                if (ch == '\n' || ch == '\r') {
-                    ctx.state = PARSER_STATE.SKIP_LEAD_WS;
-                } else {
-                    // escaped character
-                    String escaped;
-                    switch (ch) {
-                        case 'n':
-                            escaped = "\n";
-                            break;
-                        case 'r':
-                            escaped = "\r";
-                            break;
-                        case 't':
-                            escaped = "\t";
-                            break;
-                        case 'f':
-                            escaped = "\f";
-                            break;
-                        default:
-                            escaped = String.valueOf(ch);
-                            break;
-                    }
-                    ctx.parts.add(escaped);
-                    ctx.state = PARSER_STATE.IN_QUOTE;
-                }
-                // anchor to next character
-                anchor = nextc + 1;
-                continue;
-                // ignore comment to EOL
-            } else if (ctx.state == PARSER_STATE.IN_COMMENT) {
-                while (ch != '\n' && ch != '\r') {
-                    nextc++;
-                    if (nextc >= eob) {
-                        return null;
-                    }
-                    ch = ctx.options.charAt(nextc);
-                }
-                anchor = nextc + 1;
-                ctx.state = PARSER_STATE.FIND_NEXT;
-                continue;
-            }
-
-            assert (ctx.state != PARSER_STATE.IN_ESCAPE);
-            assert (ctx.state != PARSER_STATE.FIND_NEXT);
-            assert (ctx.state != PARSER_STATE.SKIP_LEAD_WS);
-            assert (ctx.state != PARSER_STATE.IN_COMMENT);
-
-            switch (ch) {
-                case ' ':
-                case '\t':
-                case '\f':
-                    if (ctx.state == PARSER_STATE.IN_QUOTE) {
-                        continue;
-                    }
-                    // fall through
-                case '\n':
-                case '\r':
-                    if (ctx.parts.size() == 0) {
-                        token = ctx.options.substring(anchor, nextc);
-                    } else {
-                        ctx.parts.add(ctx.options.substring(anchor, nextc));
-                        token = String.join("", ctx.parts);
-                        ctx.parts = new ArrayList<>();
-                    }
-                    ctx.cptr = nextc + 1;
-                    ctx.state = PARSER_STATE.FIND_NEXT;
-                    return token;
-                case '#':
-                    if (ctx.state == PARSER_STATE.IN_QUOTE) {
-                        continue;
-                    }
-                    ctx.state = PARSER_STATE.IN_COMMENT;
-                    anchor = nextc + 1;
-                    break;
-                case '\\':
-                    if (ctx.state != PARSER_STATE.IN_QUOTE) {
-                        continue;
-                    }
-                    ctx.parts.add(ctx.options.substring(anchor, nextc));
-                    ctx.state = PARSER_STATE.IN_ESCAPE;
-                    // anchor after backslash character
-                    anchor = nextc + 1;
-                    break;
-                case '\'':
-                case '"':
-                    if (ctx.state == PARSER_STATE.IN_QUOTE && ctx.quoteChar != ch) {
-                        // not matching quote
-                        continue;
-                    }
-                    // partial before quote
-                    if (anchor != nextc) {
-                        ctx.parts.add(ctx.options.substring(anchor, nextc));
-                    }
-                    // anchor after quote character
-                    anchor = nextc + 1;
-                    if (ctx.state == PARSER_STATE.IN_TOKEN) {
-                        ctx.quoteChar = ch;
-                        ctx.state = PARSER_STATE.IN_QUOTE;
-                    } else {
-                        ctx.state = PARSER_STATE.IN_TOKEN;
-                    }
-                    break;
-                default:
-                    break;
-            }
-        }
-
-        assert (nextc == eob);
-        // Only need partial token, not comment or whitespaces
-        if (ctx.state == PARSER_STATE.IN_TOKEN || ctx.state == PARSER_STATE.IN_QUOTE) {
-            if (anchor < nextc) {
-                // not yet return until end of stream, we have part of a token.
-                ctx.parts.add(ctx.options.substring(anchor, nextc));
-            }
-        }
-        return null;
     }
 
     private void processClasspathArgs(String cpArgs) {
